--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 * {
   font-family: 'Poppins', sans-serif;
-  color: white;
+  color: rgb(255, 255, 255);
   font-size: 20px;
   font-weight: 500;
   line-height: 24px;
@@ -14,6 +14,10 @@ body {
 
 html {
   scroll-behavior: smooth;
+}
+
+:root {
+  --titre-color: #dbce95;
 }
 
 /* Mise en place du curseur */
@@ -53,7 +57,7 @@ html {
 /* Mise en page de la barre de navigation */
 
 nav a.active {
-  color: #0d6cd8;
+  color: var(--titre-color);
 }
 
 nav {
@@ -92,7 +96,7 @@ nav li {
 }
 
 nav a {
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Poppins', sans-serif;
   text-decoration: none;
   color: #fff;
   font-weight: bold;
@@ -112,16 +116,17 @@ h1 {
   line-height: 126px;
   font-style: normal;
   margin-bottom: 5vh;
-  color: #3a574b;
+  color: var(--titre-color);
 }
 
 #accueil p {
   font-size: 25px;
-  color: #979797;
+  color: var(--titre-color);
 }
 
 h2 {
   font-family: 'Poppins', sans-serif;
+  color: var(--titre-color);
   font-size: 105px;
   font-weight: 600;
   line-height: 126px;
@@ -132,7 +137,7 @@ h2 {
 .titre-nav a {
   font-family: 'Roboto Mono', monospace;
   text-decoration: none;
-  color: #0d6cd8 !important;
+  color: var(--titre-color);
   font-weight: normal;
   font-size: 23px;
   margin-left: 3vh;
@@ -148,7 +153,6 @@ h2 {
 
 .titre-nav-court a {
   font-family: 'Roboto Mono', monospace;
-  color: #0d6cd8 !important;
   font-weight: 600;
   font-size: 23px;
   margin-left: 3vh;
@@ -169,48 +173,7 @@ section {
   position: relative;
 }
 
-#conteneur-fond {
-  position: relative;
-}
-
-#conteneur-fond::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  z-index: 10;
-}
-
-#conteneur-fond::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-image: url('/portfolio/images/moutains_minimalist2_test.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  z-index: 0;
-}
-
 /* Mise en page de la section Biographie */
-
-#biographie::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 50%; /* Positionne le point de départ du dégradé au centre */
-  transform: translateX(
-    -50%
-  ); /* Ajuste le positionnement en fonction de la largeur du contenu */
-  width: 100vw;
-  height: 100%;
-  background: linear-gradient(to bottom, #add0ec 0%, rgba(0, 0, 0, 0) 90%);
-}
 
 #biographie p {
   line-height: 2;
@@ -221,7 +184,7 @@ section {
   height: 200px;
   border-radius: 50%;
   object-fit: cover;
-  object-position: center;
+  object-position: center top;
   margin-bottom: 6vh;
   border: 10px solid #afafafb7;
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
