--- a/css/styles.css
+++ b/css/styles.css
@@ -280,7 +280,7 @@ section {
   width: 45%; /* Augmenter la largeur des vignettes */
   padding: 20px;
   background-color: #77756d7e;
-  border-radius: 10px;
+  border-radius: 8px;
   text-align: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   cursor: pointer;
@@ -289,24 +289,27 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-height: 400px; /* Ajouter une hauteur minimale pour allonger les cartes */
 }
 
 .prestation-icon {
   font-size: 2em;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   color: var(--titre-color);
 }
 
 .prestation-title {
   font-size: 1.5em;
   font-weight: bold;
-  margin: 10px 0;
+  margin: 20px 0 2vw; /* Réduire l'espacement entre le titre et le texte */
   color: var(--titre-color);
 }
 
 .prestation-text {
-  font-size: 1em;
+  font-size: 1.2em;
+  line-height: 1.6; /* Augmenter l'espacement entre les lignes de texte */
   color: #333;
+  margin: 0 20px; /* Ajouter des marges pour équilibrer l'espace autour du texte */
 }
 
 .prestation-card:hover {
@@ -314,7 +317,8 @@ section {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 
-.prestation-details {
+/* Styles pour les vignettes détaillées */
+#prestation .prestation-details {
   display: none;
   position: fixed;
   top: 50%;
@@ -323,16 +327,54 @@ section {
   width: auto; /* Ajuster la largeur automatiquement */
   max-width: 80%; /* Limiter la largeur maximale */
   padding: 40px;
-  background-color: #77756d91;
-  border-radius: 10px;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+  background-color: #dbce95dc;
+  border-radius: 8px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
   z-index: 1000;
-  color: var(--titre-color);
   text-align: left; /* Aligner le texte à gauche */
+  overflow-y: auto; /* Ajouter un défilement vertical si nécessaire */
+  max-height: 80vh; /* Limiter la hauteur maximale */
+  transition: transform 0.3s ease, opacity 0.3s ease;
+  opacity: 0;
+  color: #333333; /* Couleur du texte noir */
 }
 
-.prestation-details.active {
+#prestation .prestation-details h3 {
+  margin-bottom: 20px;
+  font-family: 'Poppins', sans-serif;
+  color: rgb(37, 100, 182);
+  display: flex;
+  align-items: center;
+}
+
+#prestation .prestation-details h3 i {
+  margin-right: 10px; /* Espace entre l'icône et le titre */
+  color: #333333; /* Couleur du texte noir */
+}
+
+#prestation .prestation-details ul {
+  list-style-type: disc;
+  padding-left: 30px;
+  margin-bottom: 30px;
+}
+
+#prestation .prestation-details ul li {
+  margin-bottom: 10px; /* Augmenter l'espacement entre les lignes de descriptions */
+  color: #333333; /* Couleur du texte noir */
+}
+
+#prestation .prestation-details p {
+  margin-bottom: 10px; /* Ajouter un espace en dessous des paragraphes */
+}
+
+/* Supprimer la marge inférieure du dernier élément */
+#prestation .prestation-details > *:last-child {
+  margin-bottom: 0;
+}
+
+#prestation .prestation-details.active {
   display: block;
+  opacity: 1;
   animation: fadeIn 0.3s ease;
 }
 
@@ -346,7 +388,6 @@ section {
     transform: translate(-50%, -50%);
   }
 }
-
 /* Styles pour l'effet de flou */
 .blur-background {
   filter: blur(5px);
@@ -439,6 +480,69 @@ section {
 
 .onglet-projet.actif::before {
   background-color: #1a191d;
+  /* Styles pour les vignettes détaillées */
+  #prestation .prestation-details {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: auto; /* Ajuster la largeur automatiquement */
+    max-width: 80%; /* Limiter la largeur maximale */
+    padding: 40px;
+    background-color: #ffffff; /* Couleur de fond blanche */
+    border-radius: 15px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    text-align: left; /* Aligner le texte à gauche */
+    overflow-y: auto; /* Ajouter un défilement vertical si nécessaire */
+    max-height: 80vh; /* Limiter la hauteur maximale */
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    opacity: 0;
+    color: #333333; /* Couleur du texte noir */
+  }
+
+  #prestation .prestation-details h3 {
+    margin-bottom: 20px; /* Ajouter un espace en dessous des titres */
+    font-family: 'Poppins', sans-serif; /* Police différente pour les titres */
+    color: #007bff; /* Couleur différente pour les titres */
+    display: flex;
+    align-items: center;
+  }
+
+  #prestation .prestation-details h3 i {
+    margin-right: 10px; /* Espace entre l'icône et le titre */
+  }
+
+  #prestation .prestation-details ul {
+    list-style-type: disc; /* Utiliser des bullets points */
+    padding-left: 20px; /* Ajouter un padding pour les listes */
+  }
+
+  #prestation .prestation-details ul li {
+    margin-bottom: 10px; /* Augmenter l'espacement entre les lignes de descriptions */
+  }
+
+  #prestation .prestation-details p {
+    margin-bottom: 10px; /* Ajouter un espace en dessous des paragraphes */
+  }
+
+  #prestation .prestation-details.active {
+    display: block;
+    opacity: 1;
+    animation: fadeIn 0.3s ease;
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translate(-50%, -45%);
+    }
+    to {
+      opacity: 1;
+      transform: translate(-50%, -50%);
+    }
+  }
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%230e3147' fill-opacity='0.66'%3E%3Cpath opacity='.4' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   background-repeat: repeat;
   background-size: 100px 100px;
