--- a/css/styles.css
+++ b/css/styles.css
@@ -464,16 +464,17 @@ FIN CSS PRESTATIONS COMMENTÉ
 .conteneur-vignettes {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 20px;
 }
 
 .vignette-projet {
-  flex: 1 0 calc(33.33% - 20px);
+  flex: 0 0 calc(33.33% - 20px);
+  max-width: 350px;
   cursor: pointer;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 10px;
   cursor: none;
 }
 
@@ -1418,6 +1419,12 @@ img {
   background: rgba(21, 114, 182, 0.1);
   color: #1572b6;
   border-color: #1572b6;
+}
+
+.badge-javascript {
+  background: rgba(247, 223, 30, 0.1);
+  color: #f7df1e;
+  border-color: #f7df1e;
 }
 
 .badge:hover {
